--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,43 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: hsl(263 70% 50%);
-  --foreground: hsl(210 20% 98%);
-  --card: hsl(0 0% 100%);
-  --card-foreground: hsl(222.2 84% 4.9%);
-  --popover: hsl(0 0% 100%);
-  --popover-foreground: hsl(222.2 84% 4.9%);
-  --primary: hsl(263 70% 50%);
-  --primary-foreground: hsl(210 20% 98%);
-  --secondary: hsl(28 90% 55%);
-  --secondary-foreground: hsl(210 20% 98%);
-  --muted: hsl(210 40% 96.1%);
-  --muted-foreground: hsl(215.4 16.3% 46.9%);
-  --accent: hsl(210 40% 96.1%);
-  --accent-foreground: hsl(222.2 47.4% 11.2%);
-  --destructive: hsl(0 84.2% 60.2%);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.145 0 0);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.145 0 0);
+  --primary: #FF7900;
+  --primary-foreground: #fff;
+  --secondary: #FFE7C9;
+  --secondary-foreground: #FF7900;
+  --muted: oklch(0.97 0 0);
+  --muted-foreground: oklch(0.556 0 0);
+  --accent: oklch(0.97 0 0);
+  --accent-foreground: oklch(0.205 0 0);
+  --destructive: oklch(0.577 0.245 27.325);
   --destructive-foreground: hsl(210 20% 98%);
-  --border: hsl(214.3 31.8% 91.4%);
-  --input: hsl(214.3 31.8% 91.4%);
-  --ring: hsl(263 70% 50%);
-  --chart-1: hsl(263 70% 50%);
-  --chart-2: hsl(28 90% 55%);
-  --chart-3: hsl(120 70% 40%);
-  --chart-4: hsl(40 80% 60%);
-  --chart-5: hsl(300 60% 70%);
-  --sidebar: hsl(240 5% 96%);
-  --sidebar-foreground: hsl(222.2 84% 4.9%);
-  --sidebar-primary: hsl(263 70% 50%);
-  --sidebar-primary-foreground: hsl(210 20% 98%);
-  --sidebar-accent: hsl(28 90% 55%);
-  --sidebar-accent-foreground: hsl(210 20% 98%);
-  --sidebar-border: hsl(214.3 31.8% 91.4%);
-  --sidebar-ring: hsl(263 70% 50%);
+  --border: oklch(0.922 0 0);
+  --input: oklch(0.922 0 0);
+  --ring: oklch(0.708 0 0);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --sidebar: oklch(0.985 0 0);
+  --sidebar-foreground: oklch(0.145 0 0);
+  --sidebar-primary: oklch(0.205 0 0);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.97 0 0);
+  --sidebar-accent-foreground: oklch(0.205 0 0);
+  --sidebar-border: oklch(0.922 0 0);
+  --sidebar-ring: oklch(0.708 0 0);
   --font-sans: Varela Round, ui-sans-serif, sans-serif, system-ui;
-  --font-serif: "Playfair Display", serif;
-  --font-mono: "Fira Code", monospace;
-  --radius: 0.5rem;
+  --font-serif: 'Playfair Display', serif;
+  --font-mono: 'Fira Code', monospace;
+  --radius: 0.625rem;
   --shadow-x: 0rem;
   --shadow-y: 0.25rem;
   --shadow-blur: 0.5rem;
@@ -58,64 +59,8 @@
   --shadow-2xl: 0rem 0.25rem 0.5rem 0rem hsl(0 0% 0% / 0.25);
   --tracking-normal: 0em;
   --spacing: 0.25rem;
-}
-
-.dark {
-  --background: hsl(222.2 84% 4.9%);
-  --foreground: hsl(210 20% 98%);
-  --card: hsl(222.2 84% 4.9%);
-  --card-foreground: hsl(210 20% 98%);
-  --popover: hsl(222.2 84% 4.9%);
-  --popover-foreground: hsl(210 20% 98%);
-  --primary: hsl(263 70% 50%);
-  --primary-foreground: hsl(210 20% 98%);
-  --secondary: hsl(28 90% 55%);
-  --secondary-foreground: hsl(210 20% 98%);
-  --muted: hsl(217.2 32.6% 17.5%);
-  --muted-foreground: hsl(215 20.2% 65.1%);
-  --accent: hsl(217.2 32.6% 17.5%);
-  --accent-foreground: hsl(210 20% 98%);
-  --destructive: hsl(0 62.8% 30.6%);
-  --destructive-foreground: hsl(210 20% 98%);
-  --border: hsl(217.2 32.6% 17.5%);
-  --input: hsl(217.2 32.6% 17.5%);
-  --ring: hsl(263 70% 50%);
-  --chart-1: hsl(263 70% 50%);
-  --chart-2: hsl(28 90% 55%);
-  --chart-3: hsl(120 70% 40%);
-  --chart-4: hsl(40 80% 60%);
-  --chart-5: hsl(300 60% 70%);
-  --sidebar: hsl(220 80% 5%);
-  --sidebar-foreground: hsl(210 20% 98%);
-  --sidebar-primary: hsl(263 70% 50%);
-  --sidebar-primary-foreground: hsl(210 20% 98%);
-  --sidebar-accent: hsl(28 90% 55%);
-  --sidebar-accent-foreground: hsl(210 20% 98%);
-  --sidebar-border: hsl(217.2 32.6% 17.5%);
-  --sidebar-ring: hsl(263 70% 50%);
-  --font-sans: Varela Round, ui-sans-serif, sans-serif, system-ui;
-  --font-serif: "Playfair Display", serif;
-  --font-mono: "Fira Code", monospace;
-  --radius: 0.5rem;
-  --shadow-x: 0rem;
-  --shadow-y: 0.5rem;
-  --shadow-blur: 0.75rem;
-  --shadow-spread: 0rem;
-  --shadow-opacity: 0.5;
-  --shadow-color: hsl(0 0% 0%);
-  --shadow-2xs: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.25);
-  --shadow-xs: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.25);
-  --shadow-sm: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.5),
-    0rem 1px 2px -1px hsl(0 0% 0% / 0.5);
-  --shadow: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.5),
-    0rem 1px 2px -1px hsl(0 0% 0% / 0.5);
-  --shadow-md: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.5),
-    0rem 2px 4px -1px hsl(0 0% 0% / 0.5);
-  --shadow-lg: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.5),
-    0rem 4px 6px -1px hsl(0 0% 0% / 0.5);
-  --shadow-xl: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.5),
-    0rem 8px 10px -1px hsl(0 0% 0% / 0.5);
-  --shadow-2xl: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 1.25);
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.145 0 0);
 }
 
 @theme inline {
@@ -171,8 +116,113 @@
   --shadow-2xl: var(--shadow-2xl);
 }
 
-
+/* @media (prefers-color-scheme: dark) {
+  :root {
+  --background: hsl(222.2000 84% 4.9000%);
+  --foreground: hsl(210 20% 98%);
+  --card: hsl(222.2000 84% 4.9000%);
+  --card-foreground: hsl(210 20% 98%);
+  --popover: hsl(222.2000 84% 4.9000%);
+  --popover-foreground: hsl(210 20% 98%);
+  --primary: hsl(263 70% 50%);
+  --primary-foreground: hsl(210 20% 98%);
+  --secondary: hsl(28 90% 55.0000%);
+  --secondary-foreground: hsl(210 20% 98%);
+  --muted: hsl(217.2000 32.6000% 17.5000%);
+  --muted-foreground: hsl(215 20.2000% 65.1000%);
+  --accent: hsl(217.2000 32.6000% 17.5000%);
+  --accent-foreground: hsl(210 20% 98%);
+  --destructive: hsl(0 62.8000% 30.6000%);
+  --destructive-foreground: hsl(210 20% 98%);
+  --border: hsl(217.2000 32.6000% 17.5000%);
+  --input: hsl(217.2000 32.6000% 17.5000%);
+  --ring: hsl(263 70% 50%);
+  --chart-1: hsl(263 70% 50%);
+  --chart-2: hsl(28 90% 55.0000%);
+  --chart-3: hsl(120 70% 40%);
+  --chart-4: hsl(40 80% 60%);
+  --chart-5: hsl(300 60% 70%);
+  --sidebar: hsl(220 80% 5%);
+  --sidebar-foreground: hsl(210 20% 98%);
+  --sidebar-primary: hsl(263 70% 50%);
+  --sidebar-primary-foreground: hsl(210 20% 98%);
+  --sidebar-accent: hsl(28 90% 55.0000%);
+  --sidebar-accent-foreground: hsl(210 20% 98%);
+  --sidebar-border: hsl(217.2000 32.6000% 17.5000%);
+  --sidebar-ring: hsl(263 70% 50%);
+  --font-sans: Varela Round, ui-sans-serif, sans-serif, system-ui;
+  --font-serif: 'Playfair Display', serif;
+  --font-mono: 'Fira Code', monospace;
+  --radius: 0.5rem;
+  --shadow-x: 0rem;
+  --shadow-y: 0.5rem;
+  --shadow-blur: 0.75rem;
+  --shadow-spread: 0rem;
+  --shadow-opacity: 0.5;
+  --shadow-color: hsl(0 0% 0%);
+  --shadow-2xs: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.25);
+  --shadow-xs: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.25);
+  --shadow-sm: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.50), 0rem 1px 2px -1px hsl(0 0% 0% / 0.50);
+  --shadow: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.50), 0rem 1px 2px -1px hsl(0 0% 0% / 0.50);
+  --shadow-md: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.50), 0rem 2px 4px -1px hsl(0 0% 0% / 0.50);
+  --shadow-lg: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.50), 0rem 4px 6px -1px hsl(0 0% 0% / 0.50);
+  --shadow-xl: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.50), 0rem 8px 10px -1px hsl(0 0% 0% / 0.50);
+  --shadow-2xl: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 1.25);
+  }
+} */
 
 body {
   font-family: Varela Round, Helvetica, sans-serif;
 }
+
+.pattern {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('/pattern.png');
+  background-size: cover;
+  background-position: center;
+}
+
+.dark {
+  --background: oklch(0.145 0 0);
+  --foreground: oklch(0.985 0 0);
+  --card: oklch(0.205 0 0);
+  --card-foreground: oklch(0.985 0 0);
+  --popover: oklch(0.205 0 0);
+  --popover-foreground: oklch(0.985 0 0);
+  --primary: oklch(0.922 0 0);
+  --primary-foreground: oklch(0.205 0 0);
+  --secondary: oklch(0.269 0 0);
+  --secondary-foreground: oklch(0.985 0 0);
+  --muted: oklch(0.269 0 0);
+  --muted-foreground: oklch(0.708 0 0);
+  --accent: oklch(0.269 0 0);
+  --accent-foreground: oklch(0.985 0 0);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.556 0 0);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+  --sidebar: oklch(0.205 0 0);
+  --sidebar-foreground: oklch(0.985 0 0);
+  --sidebar-primary: oklch(0.488 0.243 264.376);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.269 0 0);
+  --sidebar-accent-foreground: oklch(0.985 0 0);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.556 0 0);
+}
+
+/* @layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+} */
