--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,11 +28,13 @@
   --chart-3: hsl(120 70% 40%);
   --chart-4: hsl(40 80% 60%);
   --chart-5: hsl(300 60% 70%);
-  --sidebar: hsl(240 5% 96%);
+  --sidebar: hsl(0, 0%, 100%);
   --sidebar-foreground: hsl(222.2000 84% 4.9000%);
+  /* --sidebar-primary: hsl(263 70% 50%); */
   --sidebar-primary: hsl(263 70% 50%);
   --sidebar-primary-foreground: hsl(210 20% 98%);
-  --sidebar-accent: hsl(28 90% 55.0000%);
+  --sidebar-accent: hsl(263 70% 50%);
+  /* --sidebar-accent: hsl(28 90% 55.0000%); */
   --sidebar-accent-foreground: hsl(210 20% 98%);
   --sidebar-border: hsl(214.3000 31.8000% 91.4000%);
   --sidebar-ring: hsl(263 70% 50%);
@@ -240,3 +242,12 @@ body {
     @apply bg-background text-foreground;
   }
 } */
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
